2006-02-24  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py (_BaseDateTimeConverter.get_format): Remove
	seconds and AM/PM for now, since we don't have enough infrastructure
	to support optional AM/PM.
	(filter_locale): Refactor to a function and replace decimal point
	with a .

	* tests/test_datatypes.py (CurrencyTest.testFormatBR): 
	Add tests for decimal points which are not .

2006-02-23  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/icon.py (IconEntry.deconstruct): 
	Add support for drawing the icon on the left side and when xalign 
	is higher than 0.5, draw the icon on the left side. 
	
	* kiwi/datatypes.py (_BaseDateTimeConverter.from_string): 
	* kiwi/ui/widgets/entry.py (DATE_MASK_TABLE): 
	Add support for datetime.time

	* kiwi/ui/comboentry.py (ComboEntry.prefill): 
	Use entry.prefill

	* kiwi/ui/widgets/entry.py (Entry.prefill): New method
	(Entry.set_completion_strings): Deprecate and use
	prefill internally

2006-02-23  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/entry.py: Split out mask and icon
	to a separate entry which doesn't depend on the framework.
	Make get_empty_mask() public.

2006-02-22  Johan Dahlin  <jdahlin@async.com.br>

	* examples/framework/diary/diary.glade:
	* examples/framework/diary/diary.py:
	* kiwi/proxies.py:
	* kiwi/ui/delegates.py:
	* kiwi/ui/gazpacholoader.py:
	* kiwi/ui/libgladeloader.py:
	* kiwi/ui/views.py:
	Add ProxyDelegate and example. Rename proxy.new_model to
	proxy.set_model.
	Add sizegroup merging support (disabled).
	Add show_and_loop method on the view.
	Remove a few mutable default arguments.
	
2006-02-21  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/entry.py (Entry.set_text): Set the cursor
	after the inserted text
	(Entry.prop_set_data_type): Right align entries which contain
	numbers by default

	* kiwi/ui/objectlist.py: Add Column.editable_attribute which
	is a row (object) specific way of saying if an attribute
	is editable or not.
